--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,11 +37,13 @@ assetic:
 doctrine:
     dbal:
         driver:   %database_driver%
-        host:     %database_host%
-        port:     %database_port%
-        dbname:   %database_name%
+        # host:     %database_host%
+        # port:     %database_port%
+        # dbname:   %database_name%
         user:     %database_user%
         password: %database_password%
+        path:     %database_path%
+        memory:   false
         charset:  UTF8
 
     orm:
