--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -2,12 +2,18 @@
 ; by enclosing the key with % (like %database_user%)
 ; Comments start with ';', as in php.ini
 [parameters]
-    database_driver   = pdo_mysql
-    database_host     = localhost
-    database_port     =
-    database_name     = symfony
-    database_user     = root
-    database_password =
+    database_driver     = pdo_sqlite
+    database_path       = /home/www-data/www/symfony/app/db/music_and_me.sqlite
+    database_user       = symfony
+    database_password   = symfony2013
+    database_host       =
+    database_port       =
+    database_name       =
+    ; database_host     = localhost
+    ; database_port     =
+    ; database_name     = symfony
+    ; database_user     = root
+    ; database_password =
 
     mailer_transport  = smtp
     mailer_host       = localhost
