Added a temporary Home controller.

--- a/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
+++ b/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
-MTIMusicAndMeBundle_homepage:
+MTIMusicAndMeBundle_hello:
     pattern:  /hello/{name}
     defaults: { _controller: MTIMusicAndMeBundle:Default:index }
+
+MTIMusicAndMeBundle_homepage:
+    pattern:  /
+    defaults: { _controller: MTIMusicAndMeBundle:Home:index }
