Started the SignUp Controller with a basic design.

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -7,8 +7,8 @@
     database_user       = symfony
     database_password   = symfony
     database_host       = localhost
-    database_port       = 
     database_name       = musicandme
+    database_port       = 3306
     ; database_host     = localhost
     ; database_port     =
     ; database_name     = symfony
