--- a/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
+++ b/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
@@ -2,6 +2,10 @@ MTIMusicAndMeBundle_hello:
     pattern:  /hello/{name}
     defaults: { _controller: MTIMusicAndMeBundle:Default:index }
 
+MTIMusicAndMeBundle_signup:
+    pattern:  /signup
+    defaults: { _controller: MTIMusicAndMeBundle:Signup:index }
+
 MTIMusicAndMeBundle_homepage:
     pattern:  /
     defaults: { _controller: MTIMusicAndMeBundle:Home:index }
