-Add getID3 library in vendor directory -Add getID3 to autoload -Add uploadController -Add Musique entity

--- a/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
+++ b/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
@@ -5,3 +5,11 @@ MTIMusicAndMeBundle_hello:
 MTIMusicAndMeBundle_homepage:
     pattern:  /
     defaults: { _controller: MTIMusicAndMeBundle:Home:index }
+
+MTIMusicAndMeBundle_upload:
+    pattern:  /upload
+    defaults: { _controller: MTIMusicAndMeBundle:Upload:index }
+
+MTIMusicAndMeBundle_save:
+    pattern:  /save
+    defaults: { _controller: MTIMusicAndMeBundle:Upload:save }
