Changed the Database encoding to UTF8.

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -9,6 +9,7 @@
     database_host       = localhost
     database_name       = musicandme
     database_port       = 3306
+    database_charset    = UTF8
     ; database_host     = localhost
     ; database_port     =
     ; database_name     = symfony
