--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -2,13 +2,13 @@
 ; by enclosing the key with % (like %database_user%)
 ; Comments start with ';', as in php.ini
 [parameters]
-    database_driver     = pdo_sqlite
-    database_path       = /home/www-data/www/symfony/app/db/music_and_me.sqlite
+    database_driver     = pdo_mysql
+    database_path       = 
     database_user       = symfony
-    database_password   = symfony2013
-    database_host       =
+    database_password   = symfony
+    database_host       = localhost
     database_port       =
-    database_name       =
+    database_name       = musicandme
     ; database_host     = localhost
     ; database_port     =
     ; database_name     = symfony
