upload integrated in the website, playtime converter in musique Entity secToDuree($seconde) AND dureeToSec($string)

--- a/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
+++ b/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
@@ -45,6 +45,10 @@ MTIMusicAndMeBundle_streamView:
     pattern:  /stream/{stream_id}
     defaults: { _controller: MTIMusicAndMeBundle:Stream:view, stream_id:-1 }
 
+MTIMusicAndMeBundle_search:
+    pattern:  /search/{toSearch}
+    defaults: { _controller: MTIMusicAndMeBundle:Search:index, toSearch:# }
+
 # Upload Routes #
 #################
 
