Update of musique. Add function: getCover()

--- a/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
+++ b/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
@@ -45,9 +45,20 @@ MTIMusicAndMeBundle_streamView:
     pattern:  /stream/{stream_id}
     defaults: { _controller: MTIMusicAndMeBundle:Stream:view, stream_id:-1 }
 
+MTIMusicAndMeBundle_search:
+    pattern:  /search
+    defaults: { _controller: MTIMusicAndMeBundle:Search:index }
+
 # Upload Routes #
 #################
 
 MTIMusicAndMeBundle_upload:
     pattern:  /upload
     defaults: { _controller: MTIMusicAndMeBundle:Upload:index }
+
+# Musiques Routes #
+###################
+
+MTIMusicAndMeBundle_searchZik:
+    pattern:  /searchzik
+    defaults: { _controller: MTIMusicAndMeBundle:SearchZik:index }
