--- a/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
+++ b/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
@@ -5,7 +5,12 @@ MTIMusicAndMeBundle_homepage:
     pattern:  /
     defaults: { _controller: MTIMusicAndMeBundle:Home:index }
 
-
+MTIMusicAndMeBundle_header:
+    pattern:  /home/header/
+    defaults: { _controller: MTIMusicAndMeBundle:Account:getHeader, _format: json }
+    requirements:
+        _format: json
+        _method: POST
 # Account Routes #
 ##################
 
@@ -46,19 +51,19 @@ MTIMusicAndMeBundle_streamView:
     defaults: { _controller: MTIMusicAndMeBundle:Stream:view, stream_id:-1 }
 
 MTIMusicAndMeBundle_search:
-    pattern:  /search
+    pattern:  /search/
     defaults: { _controller: MTIMusicAndMeBundle:Search:index }
 
 # Upload Routes #
 #################
 
 MTIMusicAndMeBundle_upload:
-    pattern:  /upload
+    pattern:  /upload/
     defaults: { _controller: MTIMusicAndMeBundle:Upload:index }
 
 # Musiques Routes #
 ###################
 
 MTIMusicAndMeBundle_searchZik:
-    pattern:  /searchzik
+    pattern:  /searchzik/
     defaults: { _controller: MTIMusicAndMeBundle:SearchZik:index }
