--- a/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
+++ b/src/MTI/MusicAndMeBundle/Resources/config/routing.yml
@@ -53,19 +53,23 @@ MTIMusicAndMeBundle_streamVote:
         _method: POST
 
 MTIMusicAndMeBundle_search:
-    pattern:  /search
+    pattern:  /search/
     defaults: { _controller: MTIMusicAndMeBundle:Search:index }
+
+MTIMusicAndMeBundle_searchZik:
+    pattern:  /stream/{stream_id}/search/
+    defaults: { _controller: MTIMusicAndMeBundle:SearchZik:index, stream_id:-1 }
 
 # Upload Routes #
 #################
 
 MTIMusicAndMeBundle_upload:
-    pattern:  /upload
+    pattern:  /upload/
     defaults: { _controller: MTIMusicAndMeBundle:Upload:index }
 
 # Musiques Routes #
 ###################
 
-MTIMusicAndMeBundle_searchZik:
-    pattern:  /searchzik
-    defaults: { _controller: MTIMusicAndMeBundle:SearchZik:index }
+# MTIMusicAndMeBundle_searchZik:
+#     pattern:  /searchzik
+#     defaults: { _controller: MTIMusicAndMeBundle:SearchZik:index }
